# pico-cpp-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
